<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:admob="http://schemas.android.com/apk/res/com.asa.easysal">
  
   
   <PreferenceCategory android:title="Options">
        <CheckBoxPreference
                android:key="overtime"
                android:title="@string/pref_ot_title"
                android:defaultValue="false"
                android:summary="@string/pref_ot_descrip" />
        <ListPreference
           android:title="Overtime Pay"
           android:summary="Select amount paid for overtime."
           android:dependency="overtime"
           android:key="overtimePay"
           android:defaultValue="1"
           android:entries="@array/ot_names"
           android:entryValues="@array/ot_values" />
        
        <CheckBoxPreference
        	android:key="taxes"
        	android:title="@string/pref_taxes"
        	android:defaultValue="false"
        	android:summary="@string/pref_taxes_summary" />
        	
       	<ListPreference
       		android:title="@string/pref_tax_rate"
       		android:summary="@string/pref_tax_rate_summary"
       		android:dependency="taxes"
       		android:defaultValue="1"
       		android:entries="@array/tax_rate_names"
       		android:entryValues="@array/tax_rate_values" />
                
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/about_title">
    
     <Preference
                android:title="EasySal Calculator Homepage"
                android:summary="Homepage"
                android:key="homepagePref" /> 
      <Preference
                android:title="@string/about_title"
                android:summary="@string/about_summary"
                android:key="aboutPref" />                   

                              
                                                              
    </PreferenceCategory>
  
</PreferenceScreen>