<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="2" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_hourly_title" />

        <TextView
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_daily_title" />

        <TextView
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_weekly_title" />

        <TextView
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_biweekly_title" />

        <TextView
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_monthly_title" />

        <TextView
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_yearly_title" />

        <TextView
            android:id="@+id/results_overtime_title"
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_overtime_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/results_hourly"
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/results_daily"
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/results_weekly"
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/results_biweekly"
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/results_monthly"
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/results_yearly"
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/results_overtime"
            style="@style/Results.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>