<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/layout_buttons_ref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/layout_buttons" />

    <ScrollView
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_buttons_ref"
        android:fillViewport="true"
        android:padding="@dimen/padding_top" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/main_wage_label"
                    style="?myText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/biweekly_salary" />

                <com.asa.easysal.widget.CancelEditText
                    android:id="@+id/main_wage_field"
                    style="?myText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/main_wage_label"
                    android:ellipsize="none"
                    android:ems="10"
                    android:hint="@string/hint_salary"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/main_hours_label"
                    style="?myText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/main_wage_field"
                    android:text="@string/biweekly_hours" />

                <com.asa.easysal.widget.CancelEditText
                    android:id="@+id/main_hours_field"
                    style="?myText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/main_hours_label"
                    android:ellipsize="none"
                    android:ems="10"
                    android:hint="@string/hint_hours"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/main_ot_label"
                    style="?myText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/main_hours_field"
                    android:text="@string/overtime_turned_on" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>